Support any attribute

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>svg-other-than-rect</title>
-    <meta name="description" content="Converts an SVG rectangle element to a polygon element.">
+    <title>svg-rect-to-path</title>
+    <meta name="description" content="Converts an SVG rectangle element to a path or polygon element.">
     <link rel="stylesheet" href="style/style.min.css">
     <script src="script/script.min.js" defer></script>
 </head>
