--- a/app/src/app.html
+++ b/app/src/app.html
@@ -1,12 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>SVG rect to path</title>
+    <meta name="description" content="Converts an SVG rectangle element to a path or polygon element.">
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-green-50">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
